samples/syntax_errors/decl_errors.epl
decl name uint = 0;
decl name uint;
decl uint i = 2;
name uint = 0;